# fuzzy

./: README.md  pyproject.toml
src/projeto_fuzzy/: fuzzy_system.py
tests/: test_fuzzy_system.py
