[project]
name = "projeto-fuzzy"
version = "0.1.0"
description = ""
authors = [
    {name = "Gilmar Júnior",email = "gilmarjunioreis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-fuzzy (>=0.5.0,<0.6.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "networkx (>=3.5,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
flake8 = "^7.3.0"
jupyter = "^1.1.1"

