[tool.poetry]
name = "projeto-fuzzy"
version = "0.1.0"
description = "Sistema Fuzzy para Uberaba - Implementação usando scikit-fuzzy"
authors = ["Gilmar Júnior <gilmarjunioreis@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_fuzzy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.3.1"
scikit-fuzzy = "^0.5.0"
matplotlib = "^3.5.0"
scipy = "^1.7.0"
pandas = "^1.3.0"
networkx = "^3.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
flake8 = "^4.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

